# rules_tensorrt_rtx

./: .pre-commit-config.yaml  .renovate.json  BUILD.bazel  MODULE.bazel  README.md  extensions.bzl  fetch_tensorrt_rtx.bzl  tensorrt_rtx_linux_x86_64.BUILD  tensorrt_rtx_windows_x86_64.BUILD
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
examples/: MODULE.bazel
examples/basic/: BUILD.bazel  main.cpp
