cc_library(
    name = "tensorrt_rtx",
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//os:linux": ["@tensorrt_rtx_linux_x86_64//:tensorrt_rtx"],
        "@platforms//os:windows": ["@tensorrt_rtx_windows_x86_64//:tensorrt_rtx"],
    }),
)

cc_library(
    name = "tensorrt_onnxparser_rtx",
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//os:linux": ["@tensorrt_rtx_linux_x86_64//:tensorrt_onnxparser_rtx"],
        "@platforms//os:windows": ["@tensorrt_rtx_windows_x86_64//:tensorrt_onnxparser_rtx"],
    }),
)

alias(
    name = "tensorrt_rtx_bin",
    actual = select({
        "@platforms//os:linux": "@tensorrt_rtx_linux_x86_64//:tensorrt_rtx_bin",
        "@platforms//os:windows": "@tensorrt_rtx_windows_x86_64//:tensorrt_rtx_bin",
    }),
)
