load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "cuda_library", "requires_cuda")

cc_library(
    name = "tensorrt_rtx",
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//os:linux": ["@tensorrt_rtx_linux_x86_64//:tensorrt_rtx"],
        "@platforms//os:windows": ["@tensorrt_rtx_windows_x86_64//:tensorrt_rtx"],
    }),
    target_compatible_with = requires_cuda(),
)

cc_library(
    name = "tensorrt_onnxparser_rtx",
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//os:linux": ["@tensorrt_rtx_linux_x86_64//:tensorrt_onnxparser_rtx"],
        "@platforms//os:windows": ["@tensorrt_rtx_windows_x86_64//:tensorrt_onnxparser_rtx"],
    }),
    target_compatible_with = requires_cuda(),
)

alias(
    name = "tensorrt_rtx_bin",
    actual = select({
        "@platforms//os:linux": "@tensorrt_rtx_linux_x86_64//:tensorrt_rtx_bin",
        "@platforms//os:windows": "@tensorrt_rtx_windows_x86_64//:tensorrt_rtx_bin",
    }),
    target_compatible_with = requires_cuda(),
)
